--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@ word-wrap:break-word'>
 
 <div>
 
-<p class=MsoNormal><span class=MsoBookTitle>Miko³ajek <o:p></o:p></span></p>
+<p class=MsoNormal><span class=MsoBookTitle> O Miko³ajku <o:p></o:p></span></p>
 
 </div>
 
